Fri Oct 17 17:37:05 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

	* orbsvcs/orbsvcs/Makefile.RTCosScheduling: 
	* orbsvcs/orbsvcs/RTCosScheduling.mpc: Fixed dependency problem
	  for RH71 Static build - Moved directory RTScheduling after
	  RTSchedulingC(S).cpp in Source_Files section.
	
Fri Oct 17 21:17:03 UTC 2003 Kevin Bryan <bryank@cs.uri.edu>
    * orbsvcs/tests/RTCosScheduling/README
    * orbsvcs/tests/RTCosScheduling/RTCosScheduling_Client.dsp
    * orbsvcs/tests/RTCosScheduling/RTCosScheduling_Client_Static.dsp
    * orbsvcs/tests/RTCosScheduling/RTCosScheduling_Server.dsp
    * orbsvcs/tests/RTCosScheduling/RTCosScheduling_Server_Static.dsp
    * orbsvcs/tests/RTCosScheduling/run_test.pl:
    Fixed the Windows files so all the include and library directories are
    there.  Update the README file.  Fixed a small bug in the run_test.pl.

Fri Oct 17 12:32:53 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * CEC_DynamicImplementation.cpp
        * CEC_TypedConsumerAdmin.cpp
        * CEC_TypedProxyPushConsumer.cpp
        * CEC_TypedSupplierAdmin.cpp
          Fixed problems in emulated exception case.

        * orbsvcs/orbsvcs/FtRtEvent/Utils/UUID.cpp:
          Fixed problem in cygwin build.

Fri Oct 17 06:52:27 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* orbsvcs/tests/RTCosScheduling/RTCosScheduling.mpc: 
	* orbsvcs/tests/RTCosScheduling/Makefile.RTCosScheduling_Server: 
	* orbsvcs/tests/RTCosScheduling/Makefile.RTCosScheduling_Client: 
	* orbsvcs/tests/RTCosScheduling/Makefile: 
	* orbsvcs/tests/RTCosScheduling/Makefile.commonlib: Fixed the mpc
	  files - added a new project called common which will be built
	  before client and server. Regenerated the Makefiles. The
	  Makefile was not generated using mpc before. 

Fri Oct 17 12:37:43 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ServerScheduler_i.h:
          Added missing export macro to fix BCB link errors
